[package]
name = "dxf2svg"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
dxf = { version = "0.4.0", features = ["serialize"] }
serde_json = "1.0.66"
serde_yaml = "0.8.19"
svg = "0.10.0"
